--- a/eHour-web/src/main/webapp/css/menu.css
+++ b/eHour-web/src/main/webapp/css/menu.css
@@ -109,7 +109,6 @@
     line-height:21px;
     font-size:12px;
     text-align:left;
-    /*text-shadow: 1px 1px 1px #FFFFFF;*/
 }
 #menu h2 {
     font-size:21px;
@@ -132,12 +131,7 @@
 
 #menu li:hover div a {
     font-size:12px;
-    /*color:#015b86;*/
 }
-#menu li:hover div a:hover {
-    /*color:#029feb;*/
-}
-
 
 #menu li ul {
      list-style:none;
@@ -145,15 +139,11 @@
     margin:0 0 12px 0;
 }
 #menu li ul li {
-    /*font-size:12px;*/
-    /*line-height:24px;*/
     position:relative;
-    /*text-shadow: 1px 1px 1px #ffffff;*/
     padding:0;
     margin:0;
     float:none;
     text-align:left;
-    /*width:130px;*/
 }
 #menu li ul li:hover {
     background:none;
